Begin correcting overflow issues

--- a/css/taskbar.css
+++ b/css/taskbar.css
@@ -18,4 +18,5 @@
   display: flex;
   /* overflow: hidden; */
   pointer-events: initial;
+  position: relative;
 }
