--- a/css/taskbar/startbutton.css
+++ b/css/taskbar/startbutton.css
@@ -5,6 +5,7 @@
   align-items: center;
   width: 35px;
   height: 35px;
+  min-width: 35px;
   border-radius: 7px;
   border: none;
   margin: 0;
